Fix: sign-in and registration modals header visible

--- a/src/mobile/styles/components/Modal.pcss
+++ b/src/mobile/styles/components/Modal.pcss
@@ -62,7 +62,7 @@
 
     &--open {
       top: 20vh;
-      overflow: hidden;
+      overflow: visible;
       height: 100vh;
     }
   }
